samples/_failures_safe/1761710125_e9d34b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1898de0.c: In function ‘main’:
./samples/SAFE/__tmp_e1898de0.c:150:16: error: expected ‘;’ at end of input
  150 |     init_matrix
      |                ^
      |                ;
./samples/SAFE/__tmp_e1898de0.c:150:5: error: expected declaration or statement at end of input
  150 |     init_matrix
      |     ^~~~~~~~~~~
